--- a/LLM-project/appjupyter.ipynb
+++ b/LLM-project/appjupyter.ipynb
@@ -232,23 +232,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Requirement already satisfied: ollama in /Library/Frameworks/Python.framework/Versions/3.10/lib/python3.10/site-packages (0.1.8)\n",
-      "Requirement already satisfied: httpx<0.28.0,>=0.27.0 in /Library/Frameworks/Python.framework/Versions/3.10/lib/python3.10/site-packages (from ollama) (0.27.0)\n",
-      "Requirement already satisfied: anyio in /Library/Frameworks/Python.framework/Versions/3.10/lib/python3.10/site-packages (from httpx<0.28.0,>=0.27.0->ollama) (4.3.0)\n",
-      "Requirement already satisfied: certifi in /Library/Frameworks/Python.framework/Versions/3.10/lib/python3.10/site-packages (from httpx<0.28.0,>=0.27.0->ollama) (2024.2.2)\n",
-      "Requirement already satisfied: httpcore==1.* in /Library/Frameworks/Python.framework/Versions/3.10/lib/python3.10/site-packages (from httpx<0.28.0,>=0.27.0->ollama) (1.0.5)\n",
-      "Requirement already satisfied: idna in /Library/Frameworks/Python.framework/Versions/3.10/lib/python3.10/site-packages (from httpx<0.28.0,>=0.27.0->ollama) (3.6)\n",
-      "Requirement already satisfied: sniffio in /Library/Frameworks/Python.framework/Versions/3.10/lib/python3.10/site-packages (from httpx<0.28.0,>=0.27.0->ollama) (1.3.1)\n",
-      "Requirement already satisfied: h11<0.15,>=0.13 in /Library/Frameworks/Python.framework/Versions/3.10/lib/python3.10/site-packages (from httpcore==1.*->httpx<0.28.0,>=0.27.0->ollama) (0.14.0)\n",
-      "Requirement already satisfied: exceptiongroup>=1.0.2 in /Library/Frameworks/Python.framework/Versions/3.10/lib/python3.10/site-packages (from anyio->httpx<0.28.0,>=0.27.0->ollama) (1.2.0)\n",
-      "Requirement already satisfied: typing-extensions>=4.1 in /Library/Frameworks/Python.framework/Versions/3.10/lib/python3.10/site-packages (from anyio->httpx<0.28.0,>=0.27.0->ollama) (4.10.0)\n"
+      "Requirement already satisfied: ollama in /Users/boqiang.liang/.pyenv/versions/3.10.4/lib/python3.10/site-packages (0.1.8)\n",
+      "Requirement already satisfied: httpx<0.28.0,>=0.27.0 in /Users/boqiang.liang/.pyenv/versions/3.10.4/lib/python3.10/site-packages (from ollama) (0.27.0)\n",
+      "Requirement already satisfied: anyio in /Users/boqiang.liang/.pyenv/versions/3.10.4/lib/python3.10/site-packages (from httpx<0.28.0,>=0.27.0->ollama) (4.3.0)\n",
+      "Requirement already satisfied: certifi in /Users/boqiang.liang/.pyenv/versions/3.10.4/lib/python3.10/site-packages (from httpx<0.28.0,>=0.27.0->ollama) (2022.12.7)\n",
+      "Requirement already satisfied: httpcore==1.* in /Users/boqiang.liang/.pyenv/versions/3.10.4/lib/python3.10/site-packages (from httpx<0.28.0,>=0.27.0->ollama) (1.0.5)\n",
+      "Requirement already satisfied: idna in /Users/boqiang.liang/.pyenv/versions/3.10.4/lib/python3.10/site-packages (from httpx<0.28.0,>=0.27.0->ollama) (2.8)\n",
+      "Requirement already satisfied: sniffio in /Users/boqiang.liang/.pyenv/versions/3.10.4/lib/python3.10/site-packages (from httpx<0.28.0,>=0.27.0->ollama) (1.3.0)\n",
+      "Requirement already satisfied: h11<0.15,>=0.13 in /Users/boqiang.liang/.pyenv/versions/3.10.4/lib/python3.10/site-packages (from httpcore==1.*->httpx<0.28.0,>=0.27.0->ollama) (0.14.0)\n",
+      "Requirement already satisfied: exceptiongroup>=1.0.2 in /Users/boqiang.liang/.pyenv/versions/3.10.4/lib/python3.10/site-packages (from anyio->httpx<0.28.0,>=0.27.0->ollama) (1.1.1)\n",
+      "Requirement already satisfied: typing-extensions>=4.1 in /Users/boqiang.liang/.pyenv/versions/3.10.4/lib/python3.10/site-packages (from anyio->httpx<0.28.0,>=0.27.0->ollama) (4.10.0)\n"
      ]
     }
    ],
